# Voxly

./: .gitignore  CLAUDE.md  README.md  README.tauri.md  index.html  package.json  pnpm-lock.yaml  project.yml  vite.config.ts
.github/workflows/: pages.yml  release.yml
Scripts/: build-whisper-xcframework.sh  download-model.sh  generate-appicon.swift
Sources/Voxly/: AppState.swift  AudioRecorder.swift  MenuBarView.swift  PermissionsManager.swift  TextInserter.swift  Voxly-Bridging-Header.h  VoxlyApp.swift  WhisperEngine.swift
Sources/Voxly/App/: AppDelegate.swift
Sources/Voxly/Controllers/: DictationController.swift
Sources/Voxly/Models/: AppPaths.swift  AudioInputDevice.swift  ModelCatalog.swift  ModelLocator.swift  ModelSize.swift  PasteMode.swift  TranscriptionRecord.swift
Sources/Voxly/Stores/: HistoryStore.swift  ModelDownloader.swift  SettingsStore.swift
Support/: Info.plist
claudedocs/: voxly-design-system.md
design/: design-systems.html  signal.html
site/: index.html  main.js  styles.css
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  downloader.rs  lib.rs  main.rs  models.rs  paste.rs  permissions.rs  state.rs  storage.rs  whisper.rs
src/components/: Sidebar.tsx  StatusBar.tsx
src/lib/: ipc.ts  types.ts  useVoxly.ts
src/pages/: AboutPage.tsx  HistoryPage.tsx  ModelsPage.tsx  OnboardingPage.tsx  SettingsPage.tsx
src/styles/: about.css  app.css  global.css  history.css  models.css  onboarding.css  settings.css
(+11 files in other folders)
