[package]
name = "voxly"
version = "1.0.0"
description = "Local speech-to-text dictation for macOS"
authors = ["Voxly"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "voxly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"
dirs = "5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

cpal = "0.15"
rubato = "0.15"
whisper-rs = { version = "0.14", features = ["metal"] }
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSWorkspace"] }
core-graphics = "0.25"
core-foundation = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
